--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.1.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.hburak.redis1</groupId>
-	<artifactId>redisdemo1</artifactId>
+	<groupId>com.hburak.cms</groupId>
+	<artifactId>cmsdemo1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>redisdemo1</name>
+	<name>cmsdemo1</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -23,10 +23,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
