--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.h2.console.enabled=true # Whether to enable the console.
-spring.h2.console.path=/h2 # Path at which the console is available.
+server.servlet.context-path=/api
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
