--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.servlet.context-path=/api
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+# to fix "No serializer found for class org.hibernate.proxy.pojo.javassist.Javassist" error
+# https://stackoverflow.com/questions/24994440/no-serializer-found-for-class-org-hibernate-proxy-pojo-javassist-javassist
+spring.jackson.serialization.fail-on-empty-beans=false
