--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.servlet.context-path=/api
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:~/test1
+spring.datasource.username=sa
+spring.datasource.password=123
 
 # to fix "No serializer found for class org.hibernate.proxy.pojo.javassist.Javassist" error
 # https://stackoverflow.com/questions/24994440/no-serializer-found-for-class-org-hibernate-proxy-pojo-javassist-javassist
