--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,25 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.syncope.identityconnectors</groupId>
+			<artifactId>framework</artifactId>
+			<version>0.4.3</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
